<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, XTradeActivity!</string>
    <string name="app_name">XTrade</string>
    <string name="username_or_email_hint">Username or Email</string>
    <string name="username_hint">Username</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>

    <color name="white">#FFFFFF</color>
    <color name="grey">#999999</color>

    <string name="login">Sign In</string>
    <string name="login_google">Sign In Google Account</string>
    <string name="sign_up"><u>Sign Up</u></string>
    <string name="forgot_password"><u>Forgot your password?</u></string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember me</string>
    <string name="edit">Edit</string>
    <string name="favorite">Favorite</string>
    <string name="new_trader">New</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="signing_in">Signing in...</string>
    <string name="authentication_failed">Authentication failed</string>
    <string name="preferece_notification">Receive Notifications</string>
    <string name="summary_checkbox_preference">Allow XTrade to notify you whenever an important event ocurred.</string>
    <string name="preference_category_general">General</string>
    <string name="preference_language">Language</string>
    <string name="preference_language_description">Change application language</string>
    <string name="preference_category_notification">Notifications</string>
    <string name="delete_client">Delete Client</string>
    <string name="tradername">Trader Name</string>
    <string name="traderwebsite">Trader Website</string>
    <string name="traderaddress">Trader Address</string>
    <string name="traderposx">Trader Location X</string>
    <string name="traderposy">Trader Location Y</string>
    <string name="add">Add</string>
    <string name="address">Address</string>
    <string name="where">Where?</string>
    <string name="register">Register</string>
    <string name="save">Save</string>
    <string name="classification">Classification</string>
    <string name="trader">Trader</string>
    <string name="traders">Traders</string>
    <string name="events">Events</string>
    <string name="performance">Performance</string>
    <string name="today">Today</string>
    <string name="from_gallery">From Gallery</string>
    <string name="from_camera">From Camera</string>
    <string name="classficationname">Classification Name</string>

    <color name="black">#000000</color>

    <string name="general">General</string>
    <string name="detail">Detail</string>
    <string name="contacts">Contacts</string>
    <string name="contactfirstname">First Name</string>
    <string name="contactlastname">Last Name</string>
    <string name="contacttype">Contact Type</string>
    <string name="contactemail">Contact Email</string>
    <string name="contactphone">Contact Phone</string>

    <string-array name="supported_languages">
        <item>English</item>
        <item>Spanish</item>
    </string-array>
    <string-array name="supported_languages_entries">
        <item>en</item>
        <item>es</item>
    </string-array>

    <string name="rest_password">Reset Password</string>

</resources>