<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/mniNewTrader"
        android:icon="@drawable/clientplus"
        android:showAsAction="always"
        android:title="@string/new_trader"
        android:titleCondensed="@string/new_trader"/>
    <item
        android:id="@+id/mniProfile"
        android:showAsAction="never"
        android:title="@string/profile"
        android:titleCondensed="@string/new_trader"/>
    <item
        android:id="@+id/mniSettings"
        android:showAsAction="never"
        android:title="@string/settings"
        android:titleCondensed="@string/new_trader"/>
    <item
        android:id="@+id/mniAbout"
        android:showAsAction="never"
        android:title="@string/about"
        android:titleCondensed="@string/new_trader"/>

</menu>