<?xml version="1.0" encoding="utf-8"?>
<com.xtrade.android.widget.DashboardLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <Button
        android:id="@+id/buttonClient"
        style="@style/DashboardButton"
        android:drawableTop="@drawable/ic_client"
        android:text="@string/client" />

    <Button
        android:id="@+id/buttonEvent"
        style="@style/DashboardButton"
        android:drawableTop="@drawable/ic_client"
        android:text="@string/events" />

    <Button
        android:id="@+id/buttonPerformance"
        style="@style/DashboardButton"
        android:drawableTop="@drawable/ic_client"
        android:text="@string/performance" />

    <Button
        android:id="@+id/buttonToday"
        style="@style/DashboardButton"
        android:drawableTop="@drawable/ic_client"
        android:text="@string/today" />
    
    
    

</com.xtrade.android.widget.DashboardLayout>