<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

   <TextView
        android:id="@+id/textView1"
        style="@style/TextAppearance.XTrade.HeaderTraderDetail"
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password" />
    
   
    <EditText
        android:id="@+id/editUsername"
        android:hint="@string/username_or_email_hint"
        android:layout_width="match_parent"
        android:layout_margin="10dp"
        android:layout_height="wrap_content" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/buttonResetPassword"
        style="@style/TradeButton"
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        
        android:text="@string/rest_password" />
    
</LinearLayout>