<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ImageButton
        android:id="@+id/ibtContactPhoto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/main_client" />

    <EditText
        android:id="@+id/etxFirstContactName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:ems="10"
        android:hint="@string/contactfirstname"
        android:inputType="textPersonName" >
        <requestFocus />
    </EditText>
    
	<EditText
        android:id="@+id/etxLastContactName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:ems="10"
        android:hint="@string/contactlastname"
        android:inputType="textPersonName" >        
    </EditText>
    <Spinner
        android:id="@+id/spnContactType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="19dp" />

    <EditText
        android:id="@+id/etxContactEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:ems="10"
        android:hint="@string/contactemail"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/etxContactPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:ems="10"
        android:hint="@string/contactphone"
        android:inputType="phone" />

</LinearLayout>
